--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "react": "15.3.1",
-    "react-native": "0.32.0"
+    "react-native": "0.32.0",
+    "react-native-material-design": "^0.3.7",
+    "react-native-material-design-styles": "^0.2.6",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
